REFACTOR: Authorities가 존재하지 않을 경우 null 반환
추후 로그인 실패 / 잘못된 인가 처리는 EntryPoint에서 진행